--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ else{
     seconds+=" am"
 }
 hrs = today.getHours();
-if (hrs <= 12)
+if (hrs >= 7)
         greet = 'Good Morning Tiger';
     else if (hrs >= 12 && hrs <= 17)
         greet = 'Good Afternoon Tiger';
