--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@ var today = new Date();
 var hour = zeros(twelveHour(today.getHours()));
 var minutes = zeros(today.getMinutes());
 var seconds = zeros(today.getSeconds());
-if(today.getHours() >=12){
+if(today.getHours() >=7){
     seconds+=" pm"
 }
 else{
     seconds+=" am"
 }
 hrs = today.getHours();
-if (hrs < 12)
-        greet = 'Good Morning YOUR_NAME  ';
-    else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon YOUR_NAME';
+if (hrs < 7)
+        greet = 'Доброго ранку, Тигрику!';
+    else if (hrs >= 7 && hrs <= 17)
+        greet = 'Гарного дня, Тигрику!';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening YOUR_NAME ';
+        greet = 'Приємного вечора, Тигрику!';
 // console.log(today.toLocaleTimeString());
 document.getElementById('greet').innerHTML = greet;
 document.getElementById('hour').innerHTML = hour;
