--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ h1 {
     </style>
 </head>
 <body>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Bebas+Neue" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:400,700" rel="stylesheet">
 
 <div class="full-table">
   <div class="table-cell">
