--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
 
 <body>
 
-  <button class="btn large my-color rounded threeD" type="button" onclick="navigate()"> <i class="fa-regular fa-star"></i> My Button</button>
+  <button class="btn large my-color rounded threeD" type="button" onclick="navigate()"> <i class="fa-regular fa-star"></i> Відгуки Airbnb</button>
   
   <script>
     function navigate() {
-      window.open("https://example.com", '_blank').focus();
+      window.open("https://www.notion.so/maxdmitriev/Airbnb-3ee6953d83bf4485b5d35171cac6cd1b", '_blank').focus();
     }
   </script>
 
