--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet" >
-    <script  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="  crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
     <script>
         (function ($) {
 	$.fn.countTo = function (options) {
@@ -149,33 +148,57 @@ body {
 .fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
 
 </style>
-</head>
+<style>.HiddenByLaitis{opacity:0 !important; display: none !important; pointer-events: none !important;} .ShownByLaitis, .HiddenByLaitis{margin: 0 !important; padding: 0 !important; width:auto !important; height: auto !important;}</style></head>
 <body>
     
    
+
 
 <div class="wrapper">
 
 
     <div class="counter col_third">
       <i class="fas fa-route fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="18" data-speed="1500"></h2>
+      <h2 class="timer count-title count-number" data-to="18" data-speed="1500">18</h2>
       <p class="count-text ">Cities</p>
     </div>
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="6" data-speed="1500"></h2>
+      <h2 class="timer count-title count-number" data-to="6" data-speed="1500">6</h2>
       <p class="count-text ">Countries</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="3" data-speed="1500"></h2>
+        <h2 class="timer count-title count-number" data-to="3" data-speed="1500">3</h2>
+         <p class="count-text ">Continents</p>
+      </div>
+
+
+</div><div class="wrapper">
+
+
+    <div class="counter col_third">
+      <i class="fas fa-route fa-2x"></i>
+      <h2 class="timer count-title count-number" data-to="18" data-speed="1500">18</h2>
+      <p class="count-text ">Cities</p>
+    </div>
+
+    <div class="counter col_third">
+      <i class="fas fa-flag fa-2x"></i>
+      <h2 class="timer count-title count-number" data-to="6" data-speed="1500">6</h2>
+      <p class="count-text ">Countries</p>
+    </div>
+
+    <div class="counter col_third">
+        <i class="fas fa-globe-africa fa-2x"></i>
+        <h2 class="timer count-title count-number" data-to="3" data-speed="1500">3</h2>
          <p class="count-text ">Continents</p>
       </div>
 
 
 </div>
-</body>
-</html>
+
+
+<deepl-input-controller></deepl-input-controller></body></html>
