--- a/index.html
+++ b/index.html
@@ -159,19 +159,20 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-route fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="18" data-speed="1500">18</h2>
-      <p class="count-text ">Cities</p>
+      <h2 class="timer count-title count-number" data-to="1" data-speed="1500">1 рік</h2>
+      <p>прийому гостей на Airbnb</p><p class="count-text ">02.06.23 - 02.06.24</p>
+    
     </div>
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="6" data-speed="1500">6</h2>
+      <h2 class="timer count-title count-number" data-to="65" data-speed="1500">65 ночей</h2><p>гості зупинялись в помешканні</p>
       <p class="count-text ">Countries</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="3" data-speed="1500">3</h2>
+        <h2 class="timer count-title count-number" data-to="31" data-speed="1500">32 гостя</h2><p>гості зупинялись в помешканні</p>
          <p class="count-text ">Continents</p>
       </div>
 
@@ -181,19 +182,19 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-route fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="18" data-speed="1500">18</h2>
+      <h2 class="timer count-title count-number" data-to="18" data-speed="1500">18</h2><p>гості зупинялись в помешканні</p>
       <p class="count-text ">Cities</p>
     </div>
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="6" data-speed="1500">6</h2>
+      <h2 class="timer count-title count-number" data-to="26" data-speed="1500">26 бронювань</h2><p>в 3-х кімнатах</p>
       <p class="count-text ">Countries</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="3" data-speed="1500">3</h2>
+        <h2 class="timer count-title count-number" data-to="3384,97" data-speed="1500">€ 3384,97</h2><p>з низ € 714,16 і $2882,71</p>
          <p class="count-text ">Continents</p>
       </div>
 
