--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="65" data-speed="1500">65 ночей</h2><p>гості зупинялись в помешканні</p>
-      <p class="count-text ">Countries</p>
+      <h2 class="timer count-title count-number" data-to="65" data-speed="1500">65</h2><p>ночей</p>
+      <p class="count-text ">більше 2-х місяців</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="31" data-speed="1500">32 гостя</h2><p>гості зупинялись в помешканні</p>
+        <h2 class="timer count-title count-number" data-to="31" data-speed="1500">32</h2><p>гостя зупинялись в помешканні</p>
          <p class="count-text ">Continents</p>
       </div>
 
@@ -188,13 +188,13 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="26" data-speed="1500">26 бронювань</h2><p>в 3-х кімнатах</p>
+      <h2 class="timer count-title count-number" data-to="26" data-speed="1500">26</h2><p>бронювань в 3-х кімнатах</p>
       <p class="count-text ">Countries</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="3 385" data-speed="1500">3 385</h2><p>з них € 714,16 і $ 2882,71</p>
+        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500">3385</h2><p>Євро, з них € 714,16 і $ 2882,71</p>
          <p class="count-text ">Continents</p>
       </div>
 
