--- a/index.html
+++ b/index.html
@@ -159,20 +159,20 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-route fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="1" data-speed="1500">1 рік</h2>
-      <p>прийому гостей на Airbnb</p><p class="count-text ">02.06.23 - 02.06.24</p>
+      <h2 class="timer count-title count-number" data-to="1" data-speed="1500">1</h2>
+      <p>РІК ПРИЙОМУ ГОСТЕЙ</p><p class="count-text ">02.06.23 - 02.06.24</p>
     
     </div>
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="65" data-speed="1500">65</h2><p>ночей</p>
+      <h2 class="timer count-title count-number" data-to="65" data-speed="1500">65</h2><p>НОЧЕЙ</p>
       <p class="count-text ">більше 2-х місяців</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="32" data-speed="1500">32</h2><p>гостя зупинялись в помешканні</p>
+        <h2 class="timer count-title count-number" data-to="32" data-speed="1500">32</h2><p>ГОСТЯ</p>
          <p class="count-text ">Continents</p>
       </div>
 
@@ -188,14 +188,14 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="26" data-speed="1500">26</h2><p>бронювань в 3-х кімнатах</p>
-      <p class="count-text ">Countries</p>
+      <h2 class="timer count-title count-number" data-to="26" data-speed="1500">26</h2><p>БРОНЮВАНЬ</p>
+      <p class="count-text ">в 3-х кімнатах</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500">33</h2><p>Євро, з них € 714,16 і $ 2882,71</p>
-         <p class="count-text ">Continents</p>
+        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500">4000</h2><p>Євро €</p>
+         <p class="count-text ">з них € 714,16 і $ 2882,71</p>
       </div>
 
 
