--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body {
 
     <div class="counter col_third">
       <i class="fa-duotone fa-users"></i>
-      <h2 class="timer count-title count-number" data-to="1 рік" data-speed="1500"></h2>
+      <h2 class="timer count-title count-number" data-to="1" data-speed="1500"></h2>
       <p>РІК ПРИЙОМУ ГОСТЕЙ</p><p class="count-text ">02.06.23 - 02.06.24</p>
     
     </div>
@@ -171,7 +171,7 @@ body {
     </div>
 
     <div class="counter col_third">
-        <i class="fa-duotone fa-users"></i>
+        <i class="fa-solid fa-user-group"></i>
         <h2 class="timer count-title count-number" data-to="32" data-speed="1500">32</h2><p>ГОСТЯ</p>
          <p class="count-text ">Continents</p>
       </div>
