--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@ body {
 
     <div class="counter col_third">
       <i class="fas fa-flag fa-2x"></i>
-      <h2 class="timer count-title count-number" data-to="26" data-speed="1500">26</h2><p>БРОНЮВАНЬ</p>
+      <h2 class="timer count-title count-number" data-to="26" data-speed="1500"></h2><p>БРОНЮВАНЬ</p>
       <p class="count-text ">в 3-х кімнатах</p>
     </div>
 
     <div class="counter col_third">
         <i class="fas fa-globe-africa fa-2x"></i>
-        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500">4000</h2><p>Євро €</p>
+        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500"></h2><h2>Є</h2><p>Євро €</p>
          <p class="count-text ">з них € 714,16 і $ 2882,71</p>
       </div>
 
