--- a/index.html
+++ b/index.html
@@ -158,20 +158,20 @@ body {
 
 
     <div class="counter col_third">
-      <i class="fa-duotone fa-users"></i>
+      <i class="fas fa-route fa-2x"></i>
       <h2 class="timer count-title count-number" data-to="1" data-speed="1500"></h2><h2>РІК ПРИЙОМУ ГОСТЕЙ</h2><p>РІК ПРИЙОМУ ГОСТЕЙ</p>
 	<p class="count-text ">02.06.23 - 02.06.24</p>
     
     </div>
 
     <div class="counter col_third">
-      <i class="fas fa-flag fa-2x"></i>
+      <i class="fas fa-route fa-2x"></i>
       <h2 class="timer count-title count-number" data-to="65" data-speed="1500"></h2><h2>НОЧЕЙ</h2><p>НОЧЕЙ</p>
       <p class="count-text ">більше 2-х місяців</p>
     </div>
 
     <div class="counter col_third">
-        <i class="fa-solid fa-user-group"></i>
+        <i class="fas fa-route fa-2x"></i>
         <h2 class="timer count-title count-number" data-to="32" data-speed="1500"></h2><h2>ГОСТЯ</h2><p>ГОСТЯ</p>
          <p class="count-text ">Continents</p>
       </div>
@@ -187,13 +187,13 @@ body {
     </div>
 
     <div class="counter col_third">
-      <i class="fas fa-flag fa-2x"></i>
+      <i class="fas fa-route fa-2x"></i>
       <h2 class="timer count-title count-number" data-to="26" data-speed="1500"></h2><h2>БРОНЮВАНЬ</h2><p>БРОНЮВАНЬ</p>
       <p class="count-text ">в 3-х кімнатах</p>
     </div>
 
     <div class="counter col_third">
-        <i class="fas fa-globe-africa fa-2x"></i>
+        <i class="fas fa-route fa-2x"></i>
         <h2 class="timer count-title count-number" data-to="3385" data-speed="1500"></h2><h2>ЄВРО</h2><p>Євро €</p>
          <p class="count-text ">з них € 714,16 і $ 2882,71</p>
       </div>
