--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ body {
     </div>
 
     <div class="counter col_third">
-        <i class="fas fa-route fa-2x"></i>
+        <i class="fa-solid fa-users"></i>
         <h2 class="timer count-title count-number" data-to="3385" data-speed="1500"></h2><h2>ЄВРО</h2><p>Євро €</p>
          <p class="count-text ">з них € 714,16 і $ 2882,71</p>
       </div>
