--- a/index.html
+++ b/index.html
@@ -197,59 +197,14 @@ body {
         <h2 class="timer count-title count-number" data-to="3385" data-speed="1500"></h2><h2>ЄВРО</h2><p>Євро €</p>
          <p class="count-text ">з них € 714,16 і $ 2882,71</p>
       </div>
-<html><head>
-    <style>
-        .myprof {
-    max-width: 100%;
-    padding: 10px;
-    background: #fff;
-    border: 1px solid #333;
-    border-radius: 3px;
-    margin: 0 53px 73px 53px;
-}
-.prof-left {
-    display: inline-block;
-    vertical-align: top;
-}
-.prof-right {
-    width: 930px;
-    height: 450px;
-    margin-left: 7px;
-    vertical-align: top;
-    border: 1px solid blue;
-    display: inline-block;
-}
-    </style>
-        <script src="/scripts/snippet-javascript-console.min.js?v=1"></script><style type="text/css">.as-console-wrapper { position: fixed; bottom: 0; left: 0; right: 0; max-height: 150px; overflow-y: scroll; overflow-x: hidden; border-top: 1px solid #000; display: none; }
-.as-console { background: #e9e9e9; border: 1px solid #ccc; display: table; width: 100%; border-collapse: collapse; }
-.as-console-row { display: table-row; font-family: monospace; font-size: 13px; }
-.as-console-row:after { display: table-cell; padding: 3px 6px; color: rgba(0,0,0,.35); border: 1px solid #ccc; content: attr(data-date); vertical-align: top; }
-.as-console-row + .as-console-row > * { border: 1px solid #ccc; }
-.as-console-row-code { width: 100%; white-space: pre-wrap; padding: 3px 5px; display: table-cell; font-family: monospace; font-size: 13px; vertical-align: middle; }
-.as-console-error:before { content: 'Error: '; color: #f00; }
-.as-console-assert:before { content: 'Assertion failed: '; color: #f00; }
-.as-console-info:before { content: 'Info: '; color: #00f; }
-.as-console-warning:before { content: 'Warning: '; color: #e90 }
-@-webkit-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-@-moz-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-@-ms-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-@keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-.as-console-row-code, .as-console-row:after { -webkit-animation: flash 1s; -moz-animation: flash 1s; -ms-animation: flash 1s; animation: flash 1s; }</style>
-</head>
-<body>
 <div class="myprof">
     <div class="prof-left">
-        <img src="http://placehold.it/450/&amp;text=+LOGO" alt="">
+        <img src="http://placehold.it/450/&text=+LOGO" alt="">
     </div>
     <div class="prof-right">
 
     </div>
 </div>
-<script type="text/javascript">
-        
-    </script>
-
-<div class="as-console-wrapper"><div class="as-console"></div></div></body></html>
 
 </div>
 
