--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ body {
 
     <div class="counter col_third">
         <i class="fa-solid fa-users"></i>
-        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500"></h2><h2>ЄВРО</h2><p>Євро €</p>
+        <h2 class="timer count-title count-number" data-to="3385" data-speed="1500"></h2><h2>€</h2><p>з них € 714,16 і $ 2882,71</p>
          <p class="count-text ">з них € 714,16 і $ 2882,71</p>
       </div>
 
