--- a/index.html
+++ b/index.html
@@ -147,35 +147,7 @@ body {
 .fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
 
 </style>
-<style>.HiddenByLaitis{opacity:0 !important; display: none !important; pointer-events: none !important;} .ShownByLaitis, .HiddenByLaitis{margin: 0 !important; padding: 0 !important; width:auto !important; height: auto !important;}</style>
-
-
-
-    <style>
-        .hidden {
-  opacity: 0;
-}
-
-header {
-  transition: all 5s ease;
-}
-    </style>
-        <script src="/scripts/snippet-javascript-console.min.js?v=1"></script><style type="text/css">.as-console-wrapper { position: fixed; bottom: 0; left: 0; right: 0; max-height: 150px; overflow-y: scroll; overflow-x: hidden; border-top: 1px solid #000; display: none; }
-.as-console { background: #e9e9e9; border: 1px solid #ccc; display: table; width: 100%; border-collapse: collapse; }
-.as-console-row { display: table-row; font-family: monospace; font-size: 13px; }
-.as-console-row:after { display: table-cell; padding: 3px 6px; color: rgba(0,0,0,.35); border: 1px solid #ccc; content: attr(data-date); vertical-align: top; }
-.as-console-row + .as-console-row > * { border: 1px solid #ccc; }
-.as-console-row-code { width: 100%; white-space: pre-wrap; padding: 3px 5px; display: table-cell; font-family: monospace; font-size: 13px; vertical-align: middle; }
-.as-console-error:before { content: 'Error: '; color: #f00; }
-.as-console-assert:before { content: 'Assertion failed: '; color: #f00; }
-.as-console-info:before { content: 'Info: '; color: #00f; }
-.as-console-warning:before { content: 'Warning: '; color: #e90 }
-@-webkit-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-@-moz-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-@-ms-keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-@keyframes flash { 0% { background: rgba(255,240,0,.25); } 100% { background: none; } }
-.as-console-row-code, .as-console-row:after { -webkit-animation: flash 1s; -moz-animation: flash 1s; -ms-animation: flash 1s; animation: flash 1s; }</style>
-</head>
+<style>.HiddenByLaitis{opacity:0 !important; display: none !important; pointer-events: none !important;} .ShownByLaitis, .HiddenByLaitis{margin: 0 !important; padding: 0 !important; width:auto !important; height: auto !important;}</style></head>
 <body>
     
    
@@ -183,12 +155,6 @@ header {
 
 <div class="wrapper">
 
-<header class="">
-  <div><a href="#">Пункт 1</a></div>
-  <div><a href="#">Пункт 2</a></div>
-  <div><a href="#">Пункт 3</a></div>
-  <div><a href="#">Пункт 4</a></div>
-  <div><a href="#">Пункт 5</a></div>
 
     <div class="counter col_third">
       <i class="fas fa-route fa-2x"></i>
@@ -196,11 +162,7 @@ header {
 	<p class="count-text ">02.06.23 - 02.06.24</p>
     
     </div>
-</header>
-<script type="text/javascript">
-        window.onload = () => document.querySelector('header').classList.remove('hidden');
-    </script>
-    <div class="as-console-wrapper"><div class="as-console"></div></div>
+
     <div class="counter col_third">
       <i class="fas fa-route fa-2x"></i>
       <h2 class="timer count-title count-number" data-to="65" data-speed="1500">65</h2><h2>НОЧЕЙ</h2><p>НОЧЕЙ</p>
