--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ body {
 
     <div class="counter col_third">
       
-      <h2 class="timer count-title count-number" data-to="100" data-speed="4000">100</h2><h2>ЄВРО</h2>
-      <p>НОЧЕЙ</p>
+      <h2 class="timer count-title count-number" data-to="3" data-speed="4000">100</h2><h2>ВІДЗНАКИ</h2>
+      <p>"СУПЕРГОСПОДАР"</p>
     </div>
 
     <div class="counter col_third">
