--- a/index.html
+++ b/index.html
@@ -140,12 +140,13 @@ body {
 .end { margin-right: 0 !important; }
 /* Column Grids End */
 
-.wrapper { width: 880px; margin: 0px auto; position: relative;}
-.counter { background-color: #e8e8e8; padding: 10px 0; border-radius: 5px;}
+.wrapper { width: 880px; margin: 0px auto; position: relative; color: #4ad1e5; }
+.counter { background-color: #f0fbfc; padding: 10px 0; border-radius: 7px;}
 .count-title { font-size: 45px; font-weight: normal;  margin-top: 0px; margin-bottom: 0; text-align: center; }
 .count-text { font-size: 0px; font-weight: normal;  margin-top: 0px; margin-bottom: 0; text-align: center; }
 .fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
 
+  
 </style>
 <style>.HiddenByLaitis{opacity:0 !important; display: none !important; pointer-events: none !important;} .ShownByLaitis, .HiddenByLaitis{margin: 0 !important; padding: 0 !important; width:auto !important; height: auto !important;}</style>
 <style>.HiddenByLaitis{opacity:0 !important; display: none !important; pointer-events: none !important;} .ShownByLaitis, .HiddenByLaitis{margin: 0 !important; padding: 0 !important; width:auto !important; height: auto !important;}</style></head>
