--- a/index.html
+++ b/index.html
@@ -136,12 +136,14 @@ body {
 	display: inline-block;
 	float: left;
 	margin: 2%;
-	margin-bottom: 20px;
+	margin-bottom: 5px;
+  	margin-left: 12px;
+  	margin-right: 12px;
 }
 .end { margin-right: 0 !important; }
 /* Column Grids End */
 
-.wrapper { width: 880px; margin: 0px auto; position: relative; color: #3aa1b0; }
+.wrapper { width: 880px; margin: -48px auto; position: relative; color: #3aa1b0; }
 .counter { background-color: #f0fbfc; padding: 10px 0; border-radius: 7px;}
 .count-title { font-size: 45px; font-weight: normal;  margin-top: 0px; margin-bottom: 0; text-align: center; color: #4ad1e5; }
 .count-text { font-size: 0px; font-weight: normal;  margin-top: 0px; margin-bottom: 0; text-align: center; }
@@ -205,5 +207,6 @@ body {
 
 
 <deepl-input-controller></deepl-input-controller>
+
 
 </body></html>
