--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ top: 2em; /* Положення підказки */
 
     <div class="counter col_third"
          data-tooltip="Більше 2-х місяців, або ціла 1/6 року,
-	якщо б гості бронювали безперервно"
+	якщо бронювання рахувати безперервно"
          >
       
       <h2 class="timer count-title count-number" data-to="65" data-speed="3000">65</h2><h2>НОЧЕЙ</h2><p></p>
