--- a/index.html
+++ b/index.html
@@ -236,10 +236,11 @@ top: 2em; /* Положення підказки */
     </div>
 
     <div class="counter col_third"
-         data-tooltip="Загальна сума надходжень від сервісу, з них 714,16€ та 2882,71$"
+         data-tooltip="Загальна сума надходжень від сервісу, 
+з них 714,16€ та 2882,71$"
          >
         
-        <h2 class="timer count-title count-number" data-to="3385" data-speed="5500">3,385</h2><h2>€</h2><p></p>
+        <h2 class="timer count-title count-number" data-to="3385" data-speed="5500">3,385</h2><h2>ЄВРО</h2><p></p>
          
       </div>
 
