--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ top: 2em; /* Положення підказки */
     </div>
 
     <div class="counter col_third"
-         data-tooltip="28 підтверджених бронювань з 2 червня 23 року, 26 з них вже виконано.">
+         data-tooltip="28 підтверджених бронювань, починаючи з 2 червня 23 року, 26 з них вже виконано.">
       <h2 class="timer count-title count-number" data-to="27" data-speed="3000">27</h2><h2>БРОНЮВАНЬ</h2><p></p>
     </div>
 
