--- a/index.html
+++ b/index.html
@@ -172,33 +172,33 @@ top: 2em; /* Положення підказки */
 <div class="wrapper">
    <div class="counter col_third" 
 		data-tooltip="Вже рівно 1 рік Тигрик приймає гостей разом з платформою Airbnb ">		
-     <h2 class="timer count-title count-number" data-to="12" data-speed="2000">12</h2><h2>МІСЯЦІВ</h2><p></p>
+     <h2 class="timer count-title count-number" data-from="0" data-to="12" data-speed="2000">12</h2><h2>МІСЯЦІВ</h2><p></p>
 </div> 
   
     <div class="counter col_third"
          data-tooltip="Більше 2-х місяців, або ціла 1/6 року,
 	якщо бронювання рахувати безперервно">
-      <h2 class="timer count-title count-number" data-to="65" data-speed="3000">65</h2><h2>НОЧЕЙ</h2><p></p>
+      <h2 class="timer count-title count-number" data-from="0" data-to="65" data-speed="3000">65</h2><h2>НОЧЕЙ</h2><p></p>
     </div>
 
     <div class="counter col_third"
          data-tooltip="32 людини залишались мінімум на одну ніч в квартирі, і це без сусідів та друзів">
-        <h2 class="timer count-title count-number" data-to="32" data-speed="4500">32</h2><h2>ГОСТЯ</h2><p></p>
+        <h2 class="timer count-title count-number" data-from="0" data-to="32" data-speed="4500">32</h2><h2>ГОСТЯ</h2><p></p>
       </div>
 
     <div class="counter col_third"
          data-tooltip="Три відзнаки SUPERHOST! жовтень, січень та квітень. Наступне оцінювання в липні" >
-      <h2 class="timer count-title count-number" data-to="3" data-speed="1500">3</h2><h2>ВІДЗНАКИ</h2><p></p>
+      <h2 class="timer count-title count-number" data-from="0" data-to="3" data-speed="1500">3</h2><h2>ВІДЗНАКИ</h2><p></p>
     </div>
 
     <div class="counter col_third"
-         data-tooltip="28 підтверджених бронювань, починаючи з 2 червня 23 року, 26 з них вже виконано.">
-      <h2 class="timer count-title count-number" data-to="28" data-speed="3000">28</h2><h2>БРОНЮВАНЬ</h2><p></p>
+         data-tooltip="27 підтверджених бронювань з 2 червня 23 року, 26 з них вже виконано.">
+      <h2 class="timer count-title count-number" data-from="0" data-to="27" data-speed="3000">27</h2><h2>БРОНЮВАНЬ</h2><p></p>
     </div>
 
     <div class="counter col_third"
          data-tooltip="Загальна сума надходжень від сервісу, з них 714,16€ та 2882,71$">
-        <h2 class="timer count-title count-number" data-to="3385" data-speed="5500">3,385</h2><h2>ЄВРО</h2><p></p>
+        <h2 class="timer count-title count-number" data-from="0" data-to="3385" data-speed="5500">3,385</h2><h2>ЄВРО</h2><p></p>
       </div>
 	
 </div>
